@@ -1009,6 +1009,11 @@ static char *upscrecv(char *buf)
 {
 	int res = 0;
 
+/* The code below is an unreliable way to get rid of empty lines. The ser_get_line()
+   function will read chunks up to 64 bytes at a time. If the first character read
+   is ENDCHAR, the remaining characters are discarded and lost forever (see also
+   docs/new-drivers.txt).
+
 	while (res == 0) {
 		res = ser_get_line(upsfd, buf, UPSC_BUFLEN, ENDCHAR, IGNCHARS,
 				   input_timeout_sec, 0);
@@ -1016,7 +1021,33 @@ static char *upscrecv(char *buf)
 			upsdebugx(3, "upscrecv: Empty line");
 	}
 
-	if (res == -1)
+   A slightly better way to do this, would be the following code
+
+	do {
+		buf[0] = '\0';
+
+		res = ser_get_char(upsfd, buf, input_timeout_sec, 0);
+
+		if (res < 1) {
+			break;
+		}
+
+	} while (buf[0] == ENDCHAR);
+
+	if (res == 1) {
+		res = ser_get_line(upsfd, buf+1, UPSC_BUFLEN-1, ENDCHAR, IGNCHARS,
+			input_timeout_sec, 0);
+	}
+
+   Since there have been no complaints about this so far, chances are that there
+   are no empty lines to discard, so leaving this out is probably not an issue.
+*/
+	res = ser_get_line(upsfd, buf, UPSC_BUFLEN, ENDCHAR, IGNCHARS,
+		input_timeout_sec, 0);
+
+	if (res < 0)
+		upsdebug_with_errno(3, "upscrecv");
+	else if (res == 0)
 		upsdebugx(3, "upscrecv: Timeout");
 	else
 		upsdebugx(3, "upscrecv: %u bytes:\t'%s'",
